changed maxwidth for contactform.

--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
       <div class="content">
         <div class="copyright">&copy; Glenn 2023</div>
         <div class="social-media">
-          <a href="#"
+          <a href="https://www.facebook.com"
             ><i class="fa-brands fa-facebook" style="color: #2b2b2b"></i
           ></a>
           <a href="#"
